test/Fail/MissingDefinitionData.agda
{-# OPTIONS --allow-unsolved-metas #-}

data U : ∀ t → Set
data T t : Set
